--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
   
     <title>This is my website</title>
+    <style>
+      h2{
+        color:blue;
+        font-weight: 300;
+        
+      }
+    </style>
 </head>
 <body>
   <canter> <h1>Ahmed Khalil</h1></canter> 
   <hr>
-  <h6>My name is Ahmed</h6>
-  <h6>My father's name is Khalil</h6>
+  <h2>My name is Ahmed</h2>
+  <h6 style="font-family: Arial; color:brown;">My father's name is Khalil</h6>
   <h6>I'm 19 years old</h6>
  <p>I am a student at the Computer Sciencem Institute  <br>
 Department Network <br>First stage</p>
