--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
-    <title>This is my website</title>
-    <style>
-      h2{
-        color:blue;
-        font-weight: 300;
-        
-      }
-    </style>
+  <style>
+    body {
+  background-color: lightblue;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+
+  </style>
 </head>
 <body>
   <canter> <h1>Ahmed Khalil</h1></canter> 
