--- a/index.html
+++ b/index.html
@@ -1,31 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-    body {
-  background-color: lightblue;
-}
+  <title>this is my website</title>
 
-h1 {
-  color: white;
-  text-align: center;
-}
+  <body>
+    <h3>my website</h3>
+   <p>1-</p> <a href="first.html">Crafting an eCommerce Page</a>
+ 
 
-p {
-  font-family: verdana;
-  font-size: 20px;
-}
 
-  </style>
-</head>
-<body>
-  <canter> <h1>Ahmed Khalil</h1></canter> 
-  <hr>
-  <h2>My name is Ahmed</h2>
-  <h6 style="font-family: Arial; color:brown;">My father's name is Khalil</h6>
-  <h6>I'm 19 years old</h6>
- <p>I am a student at the Computer Sciencem Institute  <br>
-Department Network <br>First stage</p>
 
 </body>
 </html>
