--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <body>
     <h3>my website</h3>
-   <p>1-</p> <a href="first.html">Crafting an eCommerce Page</a>
+  <a href="first.html">1-Crafting an eCommerce Page</a>
  
 
 
