--- a/index.html
+++ b/index.html
@@ -24,28 +24,14 @@
     <main class="product-container">
         <!-- Products-->
         <section class="product" id="product1">
-            <img src="https://i.imgur.com/LXwNDDd.jpg" width="100%" alt="Product 1">
-            <h2>Product 1</h2>
-            <p class="price">$19.99</p>
-            <button class="add-to-cart">Add to Cart</button>
-        </section>
-        <section class="product" id="product1">
-            <img src="https://i.imgur.com/LXwNDDd.jpg" width="100%" alt="Product 1">
-            <h2>Product 2</h2>
-            <p class="price">$21.99</p>
-            <button class="add-to-cart">Add to Cart</button>
-        </section>
-      <section class="product" id="product1">
-            <img src="https://i.imgur.com/LXwNDDd.jpg" width="100%" alt="Product 1">
-            <h2>Product 3</h2>
-            <p class="price">$24.99</p>
-            <button class="add-to-cart">Add to Cart</button>
-        </section>
-      <section class="product" id="product1">
-            <img src="https://i.imgur.com/LXwNDDd.jpg" width="100%" alt="Product 1">
-            <h2>Product 4</h2>
-            <p class="price">$9.99</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <table>
+             <tr> 
+                    <td class="td-tshirt" >
+                      <img src="p1.webp" width="100%" alt="Product 1">
+                       <h2>T shirt</h2>
+                    </td>
+             </tr>
+            </table>
         </section>
         <!-- Additional eCommerce sections if needed -->
     </main>
