--- a/man-clothes.html
+++ b/man-clothes.html
@@ -19,11 +19,18 @@
             </nav>
         </div>
     </header>
-      <main>
+      <main class="product-container">
         <section class="product" id="product1">
-             <img src="p1.webp" width="400px" alt="Product 1">
+             <img src="p1.webp"  alt="Product 1">
              <h2>T shirt</h2>
-             <P class="price">$20</P>
+        </section>
+        <section class="product" id="product1">
+             <img src="11.webp"  alt="Product 1">
+             <h2>shoes</h2>
+        </section>
+        <section class="product" id="product1">
+             <img src="1211.jpg" width="400px" alt="Product 1">
+             <h2>The clothes set</h2>
         </section>
     </main>
 <footer>
