--- a/man-clothes.html
+++ b/man-clothes.html
@@ -23,14 +23,17 @@
         <section class="product" id="product1">
              <img src="p1.webp"  alt="Product 1">
              <h2>T shirt</h2>
+             <p class="price">$15</p>
         </section>
         <section class="product" id="product1">
              <img src="11.webp"  alt="Product 1">
              <h2>shoes</h2>
+             <p class="price">$20</p>
         </section>
         <section class="product" id="product1">
              <img src="1211.jpg" width="400px" alt="Product 1">
              <h2>The clothes set</h2>
+             <p class="price">$70</p>
         </section>
     </main>
 <footer>
